updated sonnarqube in jenkins file