@@ -45,27 +45,27 @@ pipeline {
         }
 
         stage('Code Analysis with SonarQube') {
-            environment {
-                scannerHome = tool 'mysonarscanner4'
-            }
-            steps {
-                withSonarQubeEnv('sonar-pro') {
-                    sh '''${scannerHome}/bin/sonar-scanner \
-                   -Dsonar.projectKey=vprofile \
-                   -Dsonar.projectName=vprofile-repo \
-                   -Dsonar.projectVersion=1.0 \
-                   -Dsonar.sources=src/ \
-                   -Dsonar.java.binaries=target/classes \
-                   -Dsonar.junit.reportsPath=target/surefire-reports/ \
-                   -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                   -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
-                }
-
-                timeout(time: 10, unit: 'MINUTES') {
-                    waitForQualityGate abortPipeline: true
-                }
-            }
+    environment {
+        scannerHome = tool 'mysonarscanner4'
+        SONAR_SCANNER_OPTS = "--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED"
+    }
+    steps {
+        withSonarQubeEnv('sonar-pro') {
+            sh '''${scannerHome}/bin/sonar-scanner \
+               -Dsonar.projectKey=vprofile \
+               -Dsonar.projectName=vprofile-repo \
+               -Dsonar.projectVersion=1.0 \
+               -Dsonar.sources=src/ \
+               -Dsonar.java.binaries=target/classes \
+               -Dsonar.junit.reportsPath=target/surefire-reports/ \
+               -Dsonar.jacoco.reportsPath=target/jacoco.exec \
+               -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
         }
+        timeout(time: 10, unit: 'MINUTES') {
+            waitForQualityGate abortPipeline: true
+        }
+    }
+}
 
         stage('Build Docker Image') {
             steps {
